Causeview Package Complete/ant script/retrieveUnpackaged/objects/Installment_Fulfillment__c.object
<CustomObject>
    <description>Links received Payments to Pledge Installments.</description>
    <fields>
        <fullName>Fulfillment_Amount__c</fullName>
        <description>Amount of Pledge Installment fulfilled by Payment</description>
        <label>Fulfillment Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Fulfillment_Date__c</fullName>
        <description>Date of Payment</description>
        <formula>Payment__r.Date__c</formula>
        <label>Fulfillment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Installment__c</fullName>
        <description>Pledge Installment to be fulfilled.</description>
        <label>Installment</label>
        <referenceTo>Installment__c</referenceTo>
        <relationshipLabel>Payments Received</relationshipLabel>
        <relationshipName>Installment_Fulfillments</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Payment__c</fullName>
        <description>Related Payment record.</description>
        <label>Payment</label>
        <referenceTo>Payment__c</referenceTo>
        <relationshipLabel>Installment Fulfillments</relationshipLabel>
        <relationshipName>Installment_Fulfillments</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <label>Installment Fulfillment</label>
    <nameField>
        <displayFormat>IFN-{0000000}</displayFormat>
        <label>Fulfillment Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Installment Fulfillments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>